Fixed tooltip being cut off

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ h1 {
     position: relative;
     font-weight: normal;
     margin-top: 0;
-    margin-bottom: 7rem;
+    margin-bottom: 3rem;
 }
 
 h1::after {
